tests/cases/smoke/invalid/record_construction_unknown_field.dp
record Animal {
    name: str
}

const A = Animal {
    name: "n"
    age: 1
}
